// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiSelect /> should match snapshot - dropdown closed 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c2 {
  padding: 0.1875rem 0.5rem;
  margin-left: 0.3125rem;
  font-size: 0.85rem;
  font-weight: normal;
  line-height: 1;
  color: #fff;
  vertical-align: middle;
  background-color: #000;
  border-radius: 50%;
}

.c1 {
  height: 100%;
  padding: 1.25rem;
  font-family: inherit;
  font-size: 1rem;
  cursor: pointer;
  background-color: transparent;
  border: 1px #000 solid;
  border-bottom: 0;
  box-shadow: 0 1px #000;
}

.c1:after {
  content: '';
  display: inline-block;
  margin-left: 10px;
  padding: 3px;
  border: solid black;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}

.c1.c1.is-opened:after {
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
  -webkit-transform: rotate(-135deg);
}

<div
  class="multiselect-button-dropdown-wrapper c0"
>
  <button
    aria-haspopup="true"
    class="multiselect-button-dropdown c1"
  >
    Selected
     
    <span
      class="multiselect-badge c2"
    >
      0
    </span>
  </button>
</div>
`;

exports[`<MultiSelect /> should match snapshot - dropdown opened 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c3 {
  position: absolute;
  right: auto;
  min-width: 140px;
  padding: 1.25rem;
  border: 1px #000 solid;
}

.c7 {
  max-height: calc(100vh - 4.125rem - 2.625rem - 3.125rem - 3.75rem);
  margin: 0;
  overflow: auto;
  padding-left: 0;
  list-style: none;
}

.c5 {
  display: block;
  height: 40px;
  padding: 0 0.625rem;
  font-family: inherit;
  line-height: 40px;
  text-align: center;
  color: #fff;
  background-color: #000;
  border: none;
  border-radius: 0;
  cursor: pointer;
  height: 1.3em;
  line-height: 1em;
  color: #5e9ed6;
  background-color: transparent;
  margin-bottom: 10px;
  padding-left: 0;
}

.c6 {
  display: block;
  height: 40px;
  padding: 0 0.625rem;
  font-family: inherit;
  line-height: 40px;
  text-align: center;
  color: #fff;
  background-color: #000;
  border: none;
  border-radius: 0;
  cursor: pointer;
  height: 1.3em;
  line-height: 1em;
  color: #5e9ed6;
  background-color: transparent;
  padding-right: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  padding: 0.1875rem 0.5rem;
  margin-left: 0.3125rem;
  font-size: 0.85rem;
  font-weight: normal;
  line-height: 1;
  color: #fff;
  vertical-align: middle;
  background-color: #000;
  border-radius: 50%;
}

.c1 {
  height: 100%;
  padding: 1.25rem;
  font-family: inherit;
  font-size: 1rem;
  cursor: pointer;
  background-color: transparent;
  border: 1px #000 solid;
  border-bottom: 0;
  box-shadow: 0 1px #000;
}

.c1:after {
  content: '';
  display: inline-block;
  margin-left: 10px;
  padding: 3px;
  border: solid black;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}

.c1.c1.is-opened:after {
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
  -webkit-transform: rotate(-135deg);
}

.c8:hover {
  background-color: #f0f0f0;
}

.c10 {
  visibility: hidden;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.625rem 0;
  margin: 1px;
  line-height: 1;
  white-space: nowrap;
  cursor: pointer;
}

.c9:focus {
  outline: 1px solid #5e9ed6;
}

.c9.is-checked:after {
  content: '';
  display: block;
  width: 5px;
  height: 10px;
  margin-right: 3px;
  border: solid #000;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  padding-top: 1.25rem;
  border-top: 1px #ccc solid;
}

.c12 {
  display: block;
  height: 40px;
  padding: 0 0.625rem;
  font-family: inherit;
  line-height: 40px;
  text-align: center;
  color: #fff;
  background-color: #000;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

<div
  class="multiselect-button-dropdown-wrapper c0"
>
  <button
    aria-haspopup="true"
    class="multiselect-button-dropdown is-opened c1"
  >
    Selected
     
    <span
      class="multiselect-badge c2"
    >
      0
    </span>
  </button>
  <div
    class="multiselect-section-wrapper c3"
  >
    <div
      class="c4"
    >
      <button
        class="multiselect-button-select-all c5"
      >
        Select All
      </button>
      <button
        class="multiselect-reset-button c6"
      >
        Reset
      </button>
    </div>
    <ul
      class="multiselect-list c7"
    >
      <li
        class="multiselect-list-item c8"
        role="option"
      >
        <label
          aria-checked="false"
          class="multiselect-list-item-label c9"
          for="first-option-1"
          role="checkbox"
          tabindex="0"
        >
          First option
          <input
            class="multiselect-list-item-checkbox c10"
            id="first-option-1"
            name="first-option"
            type="checkbox"
          />
        </label>
      </li>
      <li
        class="multiselect-list-item c8"
        role="option"
      >
        <label
          aria-checked="false"
          class="multiselect-list-item-label c9"
          for="second-option-2"
          role="checkbox"
          tabindex="0"
        >
          Second option
          <input
            class="multiselect-list-item-checkbox c10"
            id="second-option-2"
            name="second-option"
            type="checkbox"
          />
        </label>
      </li>
      <li
        class="multiselect-list-item c8"
        role="option"
      >
        <label
          aria-checked="false"
          class="multiselect-list-item-label c9"
          for="third-option-3"
          role="checkbox"
          tabindex="0"
        >
          Third option
          <input
            class="multiselect-list-item-checkbox c10"
            id="third-option-3"
            name="third-option"
            type="checkbox"
          />
        </label>
      </li>
    </ul>
    <div
      class="c11"
    >
      <button
        class="multiselect-apply-button c12"
      >
        Apply
      </button>
    </div>
  </div>
</div>
`;
